@@ -1572,7 +1572,7 @@ incsrc "../StatusBarRoutinesDefines/Defines.asm"
 	RTL</pre></td></tr></table>
 <hr>
 <h2 id="Frames2Timer"><a href="#Frames2TimerBack">^</a>Display a timer in Hours:Minutes:Seconds:Centiseconds format</h2>
-Perhaps, if you wanted to display a timer on the HUD in HH:MM:SS.CC (or MM:SS.CC) format, I've provided a routine for that and this code to use it:
+Perhaps, if you wanted to display a timer on the HUD in HH:MM:SS.CC (or MM:SS.CC) format, I've provided a routine for that and a code to use it, see <kbd>UberasmTool_HudTest/Level_Timer.asm</kbd>:
 <table><tr><td><pre>
 incsrc "../StatusBarRoutinesDefines/Defines.asm"
 incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
@@ -1654,7 +1654,7 @@ incsrc "../StatusBarRoutinesDefines/StatusBarDefines.asm"
 				SEP #$20
 			...NotMaxed
 	else
-		REP #$20							;\Increment frame counter
+		REP #$20							;\Decrement frame counter
 		LDA !StatusBar_TestDisplayElement_RAMToDisplay1_4Bytes		;|Skip if timer is already 0 and triggered a code.
 		ORA !StatusBar_TestDisplayElement_RAMToDisplay1_4Bytes+2	;|
 		BEQ ..StopTimer							;/
@@ -4736,7 +4736,7 @@ incsrc "../StatusBarRoutinesDefines/Defines.asm"
 				SEP #$20
 			...NotMaxed
 	else
-		REP #$20			;\Increment frame counter
+		REP #$20			;\Decrement frame counter
 		LDA !RAMToMeasure		;|Skip if timer is already 0 and triggered a code.
 		ORA !RAMToMeasure+2		;|
 		BEQ ..StopTimer			;/
