@@ -1,4 +1,12 @@
 09-09-2024 v3.1.0
- -Made all JS code not use innerHTML.
+ - Made all JS code not use innerHTML.
 02-15-2025 v3.2.0
- -Percentage rounding variants added.
+ - Percentage rounding variants added.
+ - Defines update:
+ -- Defines for status bar positioning are now XY-based rather than bytes-offset.
+ -- Defines regarding an example usage are now separated into a different ASM text file.
+ - Timer display now have a new display mode setting for "!ShowHours": "2 significant units only"
+   which is intended to show only the highest 2 units that are nonzero, saving tiles and
+   "screen real estate", suitable for countdown timers:
+ -- If timer is less than a minute, it will show only seconds and centiseconds ("SS.CC").
+ -- If timer is between a minute and an hour, will only show minutes and seconds ("MM:SS")
